Split token service into separated AS and RS services
Reduce the MitreId dependency by removing its Client service interface
Import ProtectedResource endpoints
Import the used part of ClientAPI
Import TokenAPI and create tokens DTOs
Add logout handler