@@ -28,6 +28,7 @@ import java.util.stream.Collectors;
 
 import javax.validation.constraints.NotBlank;
 
+import org.mitre.oauth2.model.AuthenticationHolderEntity;
 import org.mitre.oauth2.model.ClientDetailsEntity;
 import org.mitre.oauth2.model.ClientRelyingPartyEntity;
 import org.mitre.oauth2.model.OAuth2AccessTokenEntity;
@@ -58,11 +59,12 @@ import it.infn.mw.iam.audit.events.client.ClientRemovedEvent;
 import it.infn.mw.iam.audit.events.client.ClientSecretUpdatedEvent;
 import it.infn.mw.iam.audit.events.client.ClientStatusChangedEvent;
 import it.infn.mw.iam.audit.events.client.ClientUpdatedEvent;
-import it.infn.mw.iam.core.IamTokenService;
 import it.infn.mw.iam.notification.NotificationFactory;
 import it.infn.mw.iam.persistence.model.IamAccount;
 import it.infn.mw.iam.persistence.model.IamAccountClient;
 import it.infn.mw.iam.persistence.repository.IamAccountRepository;
+import it.infn.mw.iam.persistence.repository.IamAuthenticationHolderRepository;
+import it.infn.mw.iam.persistence.repository.IamOAuthAccessTokenRepository;
 
 @SuppressWarnings("deprecation")
 @Service
@@ -77,14 +79,16 @@ public class DefaultClientManagementService implements ClientManagementService {
   private final UserConverter userConverter;
   private final IamAccountRepository accountRepo;
   private final OIDCTokenService oidcTokenService;
-  private final IamTokenService tokenService;
+  private final IamOAuthAccessTokenRepository accessTokenRepo;
+  private final IamAuthenticationHolderRepository authenticationHolderRepo;
   private final ApplicationEventPublisher eventPublisher;
   private final NotificationFactory notificationFactory;
 
   public DefaultClientManagementService(Clock clock, ClientService clientService,
       ClientConverter converter, ClientUtils clientUtils, UserConverter userConverter,
       IamAccountRepository accountRepo, OIDCTokenService oidcTokenService,
-      IamTokenService tokenService, ApplicationEventPublisher aep,
+      IamOAuthAccessTokenRepository accessTokenRepo,
+      IamAuthenticationHolderRepository authenticationHolderRepo, ApplicationEventPublisher aep,
       NotificationFactory notificationFactory) {
     this.clock = clock;
     this.clientService = clientService;
@@ -93,7 +97,8 @@ public class DefaultClientManagementService implements ClientManagementService {
     this.userConverter = userConverter;
     this.accountRepo = accountRepo;
     this.oidcTokenService = oidcTokenService;
-    this.tokenService = tokenService;
+    this.accessTokenRepo = accessTokenRepo;
+    this.authenticationHolderRepo = authenticationHolderRepo;
     this.eventPublisher = aep;
     this.notificationFactory = notificationFactory;
   }
@@ -106,12 +111,16 @@ public class DefaultClientManagementService implements ClientManagementService {
     ListResponseDTO.Builder<RegisteredClientDTO> resultBuilder = ListResponseDTO.builder();
 
     return resultBuilder
-      .resources(pagedResults.getContent()
-        .stream()
-        .map(converter::registeredClientDtoFromEntity)
-        .collect(Collectors.toList()))
+      .resources(
+          pagedResults.getContent().stream().map(converter::registeredClientDtoFromEntity).toList())
       .fromPage(pagedResults, pageable)
       .build();
+  }
+
+  @Override
+  public List<RegisteredClientDTO> retrieveAllClients() {
+
+    return clientService.findAll().stream().map(converter::registeredClientDtoFromEntity).toList();
   }
 
   @Override
@@ -190,11 +199,12 @@ public class DefaultClientManagementService implements ClientManagementService {
     ClientDetailsEntity newClient = converter.entityFromClientManagementRequest(clientDTO);
 
     newClient.setId(oldClient.getId());
-    if (ClientUtils.AUTH_METHODS_REQUIRING_SECRET.contains(
-        newClient.getTokenEndpointAuthMethod()) && Objects.isNull(oldClient.getClientSecret())) {
+    if (ClientUtils.AUTH_METHODS_REQUIRING_SECRET.contains(newClient.getTokenEndpointAuthMethod())
+        && Objects.isNull(oldClient.getClientSecret())) {
       newClient.setClientSecret(clientUtils.generateClientSecret());
-    } else if (!ClientUtils.AUTH_METHODS_REQUIRING_SECRET.contains(
-        newClient.getTokenEndpointAuthMethod()) && !Objects.isNull(oldClient.getClientSecret())) {
+    } else if (!ClientUtils.AUTH_METHODS_REQUIRING_SECRET
+      .contains(newClient.getTokenEndpointAuthMethod())
+        && !Objects.isNull(oldClient.getClientSecret())) {
       newClient.setClientSecret(null);
     } else {
       newClient.setClientSecret(oldClient.getClientSecret());
@@ -289,9 +299,14 @@ public class DefaultClientManagementService implements ClientManagementService {
   private OAuth2AccessTokenEntity createRegistrationAccessTokenForClient(
       ClientDetailsEntity client) {
 
-    OAuth2AccessTokenEntity token = oidcTokenService.createRegistrationAccessToken(client);
-    return tokenService.saveAccessToken(token);
+    return saveRegistrationToken(oidcTokenService.createRegistrationAccessToken(client));
+  }
 
+  private OAuth2AccessTokenEntity saveRegistrationToken(OAuth2AccessTokenEntity token) {
+    AuthenticationHolderEntity authHolder =
+        authenticationHolderRepo.save(token.getAuthenticationHolder());
+    token.setAuthenticationHolder(authHolder);
+    return accessTokenRepo.save(token);
   }
 
   @Override
@@ -305,7 +320,7 @@ public class DefaultClientManagementService implements ClientManagementService {
       rat = createRegistrationAccessTokenForClient(client);
     }
 
-    tokenService.saveAccessToken(rat);
+    saveRegistrationToken(rat);
 
     eventPublisher.publishEvent(new ClientRegistrationAccessTokenRotatedEvent(this, client));
 
